fix color contrast issues with home page

--- a/styles/base.css
+++ b/styles/base.css
@@ -41,7 +41,7 @@ main {
     justify-self: center;
 }
 nav {
-    background-color: #4e7372;
+    background-color: #b7e0e0;
     padding: 2rem 0px;
     margin: 0px;
     grid-column: 1/2;
@@ -52,7 +52,8 @@ nav a {
     display: block;
     text-decoration: none;
     font-weight: bold;
-    color: white;
+    color: #233635; 
+    ;
     padding: 1rem;
     text-align: center;
 }
@@ -60,7 +61,7 @@ nav ul {
     list-style-type: none;
 }
 nav a:hover {
-    color: rgb(13, 46, 40);
+    color: rgb(8, 100, 34);
 }
 h2 {
     font-weight: lighter;
@@ -73,9 +74,9 @@ h3 {
     color: white;
 }
 .card {
-    background-color: #4e7372;
+    background-color: #233635;
     padding: 1px 2px 10px 10px;
-    border-top: 10px solid #233635;
+    border-top: 10px solid #4e7372;
     color: #e6f5f4;
     margin: 1rem;
     grid-column: 1/2;
@@ -92,6 +93,6 @@ footer {
     font-size: small;
 }
 #lastModified {
-    color: #abd4d3;
+    color: #e6f5f4;
     font-size: x-small;
 }
